modified navbar and home

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
             </button>
             <div class="collapse navbar-collapse" id="main-nav">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                <a class="nav-link" href="#">Accueil <span class="sr-only">(current)</span></a>
-                </li>
                 <li class="nav-item">
-                <a class="nav-link" href="#">Réserver Un Terrain</a>
+                <a class="nav-link" href="#">Accueil</a>
+                </li>
+                <li class="nav-item active">
+                <a class="nav-link" href="#">Réserver Un Terrain<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                 <a class="nav-link" href="#">A propos</a>
@@ -39,6 +39,20 @@
     </nav>
 
     <!-- End Navbar -->
+
+    <!-- Start Home -->
+    <div class="home">
+        <div class="container">
+            <div class="row">
+                <img class="soccer" src="./imges/socc-shop.png" alt="soccer player">
+                <div class="definition">
+                    <h1>Jouer Au Football</h1>
+                    <p class="text-white">MALA3iiB Vous Permet de Reserver le Stade<br>et Partage la Reservatins avec equipe</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Home -->
 
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
