modified images stade

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' href="css/bootstrap.min.css">
     <link rel='stylesheet' type='text/css' href='css/style.css'>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- Start Navbar -->
@@ -44,15 +47,97 @@
     <div class="home">
         <div class="container">
             <div class="row">
-                <img class="soccer" src="./imges/socc-shop.png" alt="soccer player">
+                <img class="soccer" src="./imges/player.png" alt="soccer player">
                 <div class="definition">
-                    <h1>Jouer Au Football</h1>
-                    <p class="text-white">MALA3iiB Vous Permet de Reserver le Stade<br>et Partage la Reservatins avec equipe</p>
+                    <h1>Jouer le Football</h1>
+                    <p class="text-white">MALA3iiB Vous Permet de Reserver le terrain<br>et Partage la Reservations avec equipe</p>
                 </div>
             </div>
-        </div>
+        </div>    
     </div>
     <!-- End Home -->
+
+    <!-- Start Terrain -->
+    <div class="stade">
+        <div class="container">
+                <div class="terrain">
+                    <h1>les terrains</h1>
+                    <p>This is a wider card with supporting text below</p>
+                </div>
+                <div class="row">
+                        <!-- stade 1 -->
+                        <div class="col-sm-6 col-md-4">
+                            <div class="card bg-dark text-black">
+                                <img src="./imges/stade.jpg" class="card-img" alt="stade">
+                                <div class="card-img-overlay">
+                                    <h5 class="card-title">Card title</h5>
+                                    <p class="card-text"></p>
+                                    <p class="card-text"></p>
+                                </div>
+                            </div>
+                        </div>    
+                        <!-- stade 2 -->
+                        <div class="col-sm-6 col-md-4">
+                            <div class="card bg-dark text-black">
+                                <img src="./imges/stade2.jpg" class="card-img" alt="stade">
+                                <div class="card-img-overlay">
+                                    <h5 class="card-title">Card title</h5>
+                                    <p class="card-text"></p>
+                                    <p class="card-text"></p>
+                                </div>
+                            </div>
+                        </div>    
+                        <!-- stade 3 -->
+                        <div class="col-sm-6 col-md-4">
+                            <div class="card bg-dark text-black">
+                                <img src="./imges/stade3.jpg" class="card-img" alt="stade">
+                                <div class="card-img-overlay">
+                                    <h5 class="card-title">Card title</h5>
+                                    <p class="card-text"></p>
+                                    <p class="card-text"></p>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- stade 4 -->
+                        <div class="col-sm-6 col-md-4">
+                            <div class="card bg-dark text-black">
+                                <img src="./imges/stade4.jpg" class="card-img" alt="stade">
+                                <div class="card-img-overlay">
+                                    <h5 class="card-title">Card title</h5>
+                                    <p class="card-text"></p>
+                                    <p class="card-text"></p>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- stade 5 -->
+                        <div class="col-sm-6 col-md-4">
+                            <div class="card bg-dark text-black">
+                                <img src="./imges/stade5.jpg" class="card-img" alt="stade">
+                                <div class="card-img-overlay">
+                                    <h5 class="card-title">Card title</h5>
+                                    <p class="card-text"></p>
+                                    <p class="card-text"></p>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Stade 6 -->
+                        <div class="col-sm-6 col-md-4">
+                            <div class="card bg-dark text-black">
+                                <img src="./imges/stade.jpg" class="card-img" alt="stade">
+                                <div class="card-img-overlay">
+                                    <h5 class="card-title">Card title</h5>
+                                    <p class="card-text"></p>
+                                    <p class="card-text"></p>
+                                </div>
+                            </div>
+                        </div>
+                </div>
+            
+        </div>
+    </div>
+
+    
+    <!-- End Terrain -->
 
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
