add animation on scroll

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Mala3iib</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel='stylesheet' type='text/css' href="css/aos.css">
     <link rel='stylesheet' type='text/css' href="css/bootstrap.min.css">
     <link rel='stylesheet' type='text/css' href='css/style.css'>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,7 +26,7 @@
             <div class="collapse navbar-collapse" id="main-nav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                <a class="nav-link" href="#">Accueil</a>
+                <a class="nav-link" href="#home">Accueil</a>
                 </li>
                 <li class="nav-item active">
                 <a class="nav-link" href="#">Réserver Un Terrain<span class="sr-only">(current)</span></a>
@@ -44,7 +45,7 @@
     <!-- End Navbar -->
 
     <!-- Start Home -->
-    <div class="home">
+    <div id="home" class="home">
         <div class="container">
             <div class="row">
                 <img class="soccer" src="./imges/player.png" alt="soccer player">
@@ -58,7 +59,7 @@
     <!-- End Home -->
 
     <!-- Start Terrain -->
-    <div class="stade">
+    <div class="stade text-center">
         <div class="container">
                 <div class="terrain">
                     <h1>les terrains</h1>
@@ -67,7 +68,7 @@
                 <div class="row">
                         <!-- stade 1 -->
                         <div class="col-sm-6 col-md-4">
-                            <div class="card bg-dark text-black">
+                            <div class="card bg-dark text-black" data-aos="fade-right">
                                 <img src="./imges/stade.jpg" class="card-img" alt="stade">
                                 <div class="card-img-overlay">
                                     <h5 class="card-title">Card title</h5>
@@ -78,7 +79,7 @@
                         </div>    
                         <!-- stade 2 -->
                         <div class="col-sm-6 col-md-4">
-                            <div class="card bg-dark text-black">
+                            <div class="card bg-dark text-black" data-aos="zoom-in-down">
                                 <img src="./imges/stade2.jpg" class="card-img" alt="stade">
                                 <div class="card-img-overlay">
                                     <h5 class="card-title">Card title</h5>
@@ -88,7 +89,7 @@
                             </div>
                         </div>    
                         <!-- stade 3 -->
-                        <div class="col-sm-6 col-md-4">
+                        <div class="col-sm-6 col-md-4" data-aos="fade-left">
                             <div class="card bg-dark text-black">
                                 <img src="./imges/stade3.jpg" class="card-img" alt="stade">
                                 <div class="card-img-overlay">
@@ -99,7 +100,7 @@
                             </div>
                         </div>
                         <!-- stade 4 -->
-                        <div class="col-sm-6 col-md-4">
+                        <div class="col-sm-6 col-md-4" data-aos="fade-right">
                             <div class="card bg-dark text-black">
                                 <img src="./imges/stade4.jpg" class="card-img" alt="stade">
                                 <div class="card-img-overlay">
@@ -110,7 +111,7 @@
                             </div>
                         </div>
                         <!-- stade 5 -->
-                        <div class="col-sm-6 col-md-4">
+                        <div class="col-sm-6 col-md-4" data-aos="zoom-in-up">
                             <div class="card bg-dark text-black">
                                 <img src="./imges/stade5.jpg" class="card-img" alt="stade">
                                 <div class="card-img-overlay">
@@ -121,7 +122,7 @@
                             </div>
                         </div>
                         <!-- Stade 6 -->
-                        <div class="col-sm-6 col-md-4">
+                        <div class="col-sm-6 col-md-4" data-aos="fade-left">
                             <div class="card bg-dark text-black">
                                 <img src="./imges/stade.jpg" class="card-img" alt="stade">
                                 <div class="card-img-overlay">
@@ -142,5 +143,11 @@
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/aos.js"></script>
+    <script>
+        AOS.init({
+            duration:"2000"
+        });
+    </script>
 </body>
 </html>
