--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
                 <li class="nav-item">
                 <a class="nav-link" href="#home">Accueil</a>
                 </li>
-                <li class="nav-item active">
-                <a class="nav-link" href="#">Réserver Un Terrain<span class="sr-only">(current)</span></a>
-                </li>
                 <li class="nav-item">
                 <a class="nav-link" href="#">A propos</a>
                 </li>
                 <li class="nav-item">
                 <a class="nav-link" href="#">Contact</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Réserver<span class="sr-only">(current)</span></a>
                 </li>
             </ul>
             </div>
@@ -48,10 +48,10 @@
     <div id="home" class="home">
         <div class="container">
             <div class="row">
-                <img class="soccer" src="./imges/player.png" alt="soccer player">
+                <img class="soccer" src="./imges/player.png" alt="soccer player" data-aos="flip-left">
                 <div class="definition">
                     <h1>Jouer le Football</h1>
-                    <p class="text-white">MALA3iiB Vous Permet de Reserver le terrain<br>et Partage la Reservations avec equipe</p>
+                    <p class="text-white">MALA3iiB Vous Permet de Réserver le terrain<br>et Partage la Reservations avec equipe</p>
                 </div>
             </div>
         </div>    
@@ -61,84 +61,105 @@
     <!-- Start Terrain -->
     <div class="stade text-center">
         <div class="container">
-                <div class="terrain">
-                    <h1>les terrains</h1>
-                    <p>This is a wider card with supporting text below</p>
+            <div class="terrain">
+                <h1>les terrains</h1>
+                <p>This is a wider card with supporting text below</p>
+            </div>
+            <div class="row">
+                <!-- stade 1 -->
+                <div class="col-sm-6 col-md-4">
+                    <div class="card bg-dark text-black" data-aos="fade-right">
+                        <img src="./imges/stade.jpg" class="card-img" alt="stade">
+                        <div class="card-img-overlay">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text"></p>
+                            <p class="card-text"></p>
+                        </div>
+                    </div>
+                </div>    
+                <!-- stade 2 -->
+                <div class="col-sm-6 col-md-4">
+                    <div class="card bg-dark text-black" data-aos="zoom-in-down">
+                        <img src="./imges/stade2.jpg" class="card-img" alt="stade">
+                        <div class="card-img-overlay">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text"></p>
+                            <p class="card-text"></p>
+                        </div>
+                    </div>
+                </div>    
+                <!-- stade 3 -->
+                <div class="col-sm-6 col-md-4" data-aos="fade-left">
+                    <div class="card bg-dark text-black">
+                        <img src="./imges/stade3.jpg" class="card-img" alt="stade">
+                        <div class="card-img-overlay">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text"></p>
+                            <p class="card-text"></p>
+                        </div>
+                    </div>
                 </div>
-                <div class="row">
-                        <!-- stade 1 -->
-                        <div class="col-sm-6 col-md-4">
-                            <div class="card bg-dark text-black" data-aos="fade-right">
-                                <img src="./imges/stade.jpg" class="card-img" alt="stade">
-                                <div class="card-img-overlay">
-                                    <h5 class="card-title">Card title</h5>
-                                    <p class="card-text"></p>
-                                    <p class="card-text"></p>
-                                </div>
-                            </div>
-                        </div>    
-                        <!-- stade 2 -->
-                        <div class="col-sm-6 col-md-4">
-                            <div class="card bg-dark text-black" data-aos="zoom-in-down">
-                                <img src="./imges/stade2.jpg" class="card-img" alt="stade">
-                                <div class="card-img-overlay">
-                                    <h5 class="card-title">Card title</h5>
-                                    <p class="card-text"></p>
-                                    <p class="card-text"></p>
-                                </div>
-                            </div>
-                        </div>    
-                        <!-- stade 3 -->
-                        <div class="col-sm-6 col-md-4" data-aos="fade-left">
-                            <div class="card bg-dark text-black">
-                                <img src="./imges/stade3.jpg" class="card-img" alt="stade">
-                                <div class="card-img-overlay">
-                                    <h5 class="card-title">Card title</h5>
-                                    <p class="card-text"></p>
-                                    <p class="card-text"></p>
-                                </div>
-                            </div>
+                <!-- stade 4 -->
+                <div class="col-sm-6 col-md-4" data-aos="fade-right">
+                    <div class="card bg-dark text-black">
+                        <img src="./imges/stade4.jpg" class="card-img" alt="stade">
+                        <div class="card-img-overlay">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text"></p>
+                            <p class="card-text"></p>
                         </div>
-                        <!-- stade 4 -->
-                        <div class="col-sm-6 col-md-4" data-aos="fade-right">
-                            <div class="card bg-dark text-black">
-                                <img src="./imges/stade4.jpg" class="card-img" alt="stade">
-                                <div class="card-img-overlay">
-                                    <h5 class="card-title">Card title</h5>
-                                    <p class="card-text"></p>
-                                    <p class="card-text"></p>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- stade 5 -->
-                        <div class="col-sm-6 col-md-4" data-aos="zoom-in-up">
-                            <div class="card bg-dark text-black">
-                                <img src="./imges/stade5.jpg" class="card-img" alt="stade">
-                                <div class="card-img-overlay">
-                                    <h5 class="card-title">Card title</h5>
-                                    <p class="card-text"></p>
-                                    <p class="card-text"></p>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- Stade 6 -->
-                        <div class="col-sm-6 col-md-4" data-aos="fade-left">
-                            <div class="card bg-dark text-black">
-                                <img src="./imges/stade.jpg" class="card-img" alt="stade">
-                                <div class="card-img-overlay">
-                                    <h5 class="card-title">Card title</h5>
-                                    <p class="card-text"></p>
-                                    <p class="card-text"></p>
-                                </div>
-                            </div>
-                        </div>
+                    </div>
                 </div>
-            
+                <!-- stade 5 -->
+                <div class="col-sm-6 col-md-4" data-aos="zoom-in-up">
+                    <div class="card bg-dark text-black">
+                        <img src="./imges/stade5.jpg" class="card-img" alt="stade">
+                        <div class="card-img-overlay">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text"></p>
+                            <p class="card-text"></p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Stade 6 -->
+                <div class="col-sm-6 col-md-4" data-aos="fade-left">
+                    <div class="card bg-dark text-black">
+                        <img src="./imges/stade.jpg" class="card-img" alt="stade">
+                        <div class="card-img-overlay">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text"></p>
+                            <p class="card-text"></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-
-    
     <!-- End Terrain -->
+
+    <!-- Start RÉSERVER -->
+    <div class="reservations text-center">
+            <div class="team">
+                <img src="./imges/team.jpg" class="img-fluid" alt="reserver">
+            </div> 
+            <div class="content">
+                    <h1>Be a part of the great story</h1>
+                    <P>This is a wider card with supporting text below</P>
+            </div>
+                <button class="btn bg-success">RÉSERVER</button>
+    </div>
+
+    <!-- End RÉSERVER -->
+
+    <!-- End A PROPOS-->
+    <div class="about">
+        <div class="container">
+            <div class="">
+
+            </div>
+        </div>
+    </div>
+    <!-- Start A PROPOS-->
 
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
@@ -146,7 +167,7 @@
     <script src="js/aos.js"></script>
     <script>
         AOS.init({
-            duration:"2000"
+            duration:"1500"
         });
     </script>
 </body>
