add partie about

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="img-fluid">
     <!-- Start Navbar -->
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -152,10 +152,15 @@
     <!-- End RÉSERVER -->
 
     <!-- End A PROPOS-->
-    <div class="about">
+    <div class="about text-center">
         <div class="container">
-            <div class="">
-
+            <div class="definition">
+                <h1>a propos</h1>
+                <p>This is a wider card with supporting text below</p>
+            </div>
+            <div class="row">
+                <img src="" alt="">
+                <p></p>
             </div>
         </div>
     </div>
