add file html 'Reserver'

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     <h1>Be a part of the great story</h1>
                     <P>This is a wider card with supporting text below</P>
             </div>
-                <button class="btn">RÉSERVER</button>
+                <button onclick="reserver.html" class="btn">RÉSERVER</button>
     </div>
 
     <!-- End RÉSERVER -->
