--- a/index.html
+++ b/index.html
@@ -21,197 +21,197 @@
 </head>
 <body class="img-fluid">
     <!-- Start Navbar -->
-    
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container">
-            <a class="navbar-brand" href="#">
-                <img class="logo" src="./imges/MALA3IIB.png">
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="main-nav">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                <a class="nav-link" href="#home">Accueil</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="#about">A propos</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="#reserver">Réserver<span class="sr-only">(current)</span></a>
-                </li>
-            </ul>
+    <main class="body">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container">
+                <a class="navbar-brand" href="#">
+                    <img class="logo" src="./imges/MALA3IIB.png">
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="main-nav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                    <a class="nav-link" href="#home">Accueil</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="#about">A propos</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="#">Contact</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#reserver">Réserver<span class="sr-only">(current)</span></a>
+                    </li>
+                </ul>
+                </div>
+            </div>
+        </nav>
+
+        <!-- End Navbar -->
+
+        <!-- Start Home -->
+        <div id="home" class="home">
+            <div class="container">
+                <div class="row">
+                    <img class="soccer" src="./imges/player.png" alt="soccer player" data-aos="flip-left">
+                    <div class="definition">
+                        <h1>Jouer le Football</h1>
+                        <p class="text-white">MALA3iiB Vous Permet de Réserver le terrain<br>et Partage la Reservations avec equipe</p>
+                    </div>
+                </div>
+            </div>    
+        </div>
+        <!-- End Home -->
+
+        <!-- Start Terrain -->
+        <div class="stade text-center">
+            <div class="container">
+                <div class="terrain">
+                    <h1>les terrains</h1>
+                    <p>This is a wider card with supporting text below</p>
+                </div>
+                <div class="row">
+                    <!-- stade 1 -->
+                    <div class="col-sm-6 col-md-4">
+                        <div class="card bg-dark text-black" data-aos="fade-right">
+                            <img src="./imges/stade.jpg" class="card-img" alt="stade">
+                            <div class="card-img-overlay">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text"></p>
+                                <p class="card-text"></p>
+                            </div>
+                        </div>
+                    </div>    
+                    <!-- stade 2 -->
+                    <div class="col-sm-6 col-md-4">
+                        <div class="card bg-dark text-black" data-aos="zoom-in-down">
+                            <img src="./imges/stade2.jpg" class="card-img" alt="stade">
+                            <div class="card-img-overlay">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text"></p>
+                                <p class="card-text"></p>
+                            </div>
+                        </div>
+                    </div>    
+                    <!-- stade 3 -->
+                    <div class="col-sm-6 col-md-4" data-aos="fade-left">
+                        <div class="card bg-dark text-black">
+                            <img src="./imges/stade3.jpg" class="card-img" alt="stade">
+                            <div class="card-img-overlay">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text"></p>
+                                <p class="card-text"></p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- stade 4 -->
+                    <div class="col-sm-6 col-md-4" data-aos="fade-right">
+                        <div class="card bg-dark text-black">
+                            <img src="./imges/stade4.jpg" class="card-img" alt="stade">
+                            <div class="card-img-overlay">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text"></p>
+                                <p class="card-text"></p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- stade 5 -->
+                    <div class="col-sm-6 col-md-4" data-aos="zoom-in-up">
+                        <div class="card bg-dark text-black">
+                            <img src="./imges/stade5.jpg" class="card-img" alt="stade">
+                            <div class="card-img-overlay">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text"></p>
+                                <p class="card-text"></p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Stade 6 -->
+                    <div class="col-sm-6 col-md-4" data-aos="fade-left">
+                        <div class="card bg-dark text-black">
+                            <img src="./imges/stade.jpg" class="card-img" alt="stade">
+                            <div class="card-img-overlay">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text"></p>
+                                <p class="card-text"></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-    </nav>
+        <!-- End Terrain -->
 
-    <!-- End Navbar -->
+        <!-- Start RÉSERVER -->
+        <div id="reserver" class="reservations text-center">
+                <div class="team">
+                    <img src="./imges/team.jpg" class="img-fluid" alt="reserver">
+                </div> 
+                <div class="content">
+                        <h1>Be a part of the great story</h1>
+                        <P>This is a wider card with supporting text below</P>
+                </div>
+                    <button onclick="reserver.html" class="btn">RÉSERVER</button>
+        </div>
 
-    <!-- Start Home -->
-    <div id="home" class="home">
-        <div class="container">
-            <div class="row">
-                <img class="soccer" src="./imges/player.png" alt="soccer player" data-aos="flip-left">
+        <!-- End RÉSERVER -->
+
+        <!-- End A PROPOS-->
+        <div id="about" class="about text-center">
+            <div class="container">
                 <div class="definition">
-                    <h1>Jouer le Football</h1>
-                    <p class="text-white">MALA3iiB Vous Permet de Réserver le terrain<br>et Partage la Reservations avec equipe</p>
+                    <h1>a propos</h1>
+                    <p>This is a wider card with supporting text below</p>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum rerum nostrum ipsum hic, repudiandae ea quas cum sit commodi incidunt corrupti recusandae quaerat eius. Unde amet asperiores sequi voluptate illo.</p>
                 </div>
-            </div>
-        </div>    
-    </div>
-    <!-- End Home -->
-
-    <!-- Start Terrain -->
-    <div class="stade text-center">
-        <div class="container">
-            <div class="terrain">
-                <h1>les terrains</h1>
-                <p>This is a wider card with supporting text below</p>
-            </div>
-            <div class="row">
-                <!-- stade 1 -->
-                <div class="col-sm-6 col-md-4">
-                    <div class="card bg-dark text-black" data-aos="fade-right">
-                        <img src="./imges/stade.jpg" class="card-img" alt="stade">
-                        <div class="card-img-overlay">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text"></p>
-                            <p class="card-text"></p>
-                        </div>
-                    </div>
-                </div>    
-                <!-- stade 2 -->
-                <div class="col-sm-6 col-md-4">
-                    <div class="card bg-dark text-black" data-aos="zoom-in-down">
-                        <img src="./imges/stade2.jpg" class="card-img" alt="stade">
-                        <div class="card-img-overlay">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text"></p>
-                            <p class="card-text"></p>
-                        </div>
-                    </div>
-                </div>    
-                <!-- stade 3 -->
-                <div class="col-sm-6 col-md-4" data-aos="fade-left">
-                    <div class="card bg-dark text-black">
-                        <img src="./imges/stade3.jpg" class="card-img" alt="stade">
-                        <div class="card-img-overlay">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text"></p>
-                            <p class="card-text"></p>
-                        </div>
-                    </div>
-                </div>
-                <!-- stade 4 -->
-                <div class="col-sm-6 col-md-4" data-aos="fade-right">
-                    <div class="card bg-dark text-black">
-                        <img src="./imges/stade4.jpg" class="card-img" alt="stade">
-                        <div class="card-img-overlay">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text"></p>
-                            <p class="card-text"></p>
-                        </div>
-                    </div>
-                </div>
-                <!-- stade 5 -->
-                <div class="col-sm-6 col-md-4" data-aos="zoom-in-up">
-                    <div class="card bg-dark text-black">
-                        <img src="./imges/stade5.jpg" class="card-img" alt="stade">
-                        <div class="card-img-overlay">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text"></p>
-                            <p class="card-text"></p>
-                        </div>
-                    </div>
-                </div>
-                <!-- Stade 6 -->
-                <div class="col-sm-6 col-md-4" data-aos="fade-left">
-                    <div class="card bg-dark text-black">
-                        <img src="./imges/stade.jpg" class="card-img" alt="stade">
-                        <div class="card-img-overlay">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text"></p>
-                            <p class="card-text"></p>
-                        </div>
-                    </div>
+                <div class="row">
+                    <img src="" alt="">
+                    <p></p>
                 </div>
             </div>
         </div>
-    </div>
-    <!-- End Terrain -->
+        <!-- Start A PROPOS-->
 
-    <!-- Start RÉSERVER -->
-    <div id="reserver" class="reservations text-center">
-            <div class="team">
-                <img src="./imges/team.jpg" class="img-fluid" alt="reserver">
-            </div> 
-            <div class="content">
-                    <h1>Be a part of the great story</h1>
-                    <P>This is a wider card with supporting text below</P>
-            </div>
-                <button onclick="reserver.html" class="btn">RÉSERVER</button>
-    </div>
+        <!-- Start Footer-->
+        <footer class="footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="site-info">
+                            <a class="navbar-brand" href="#"><h2>MaLa3iiB</h2></a>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet eveniet rem tempora debitis praesentium itaque nihil.
+                            </p>
+                        </div>
 
-    <!-- End RÉSERVER -->
-
-    <!-- End A PROPOS-->
-    <div id="about" class="about text-center">
-        <div class="container">
-            <div class="definition">
-                <h1>a propos</h1>
-                <p>This is a wider card with supporting text below</p>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum rerum nostrum ipsum hic, repudiandae ea quas cum sit commodi incidunt corrupti recusandae quaerat eius. Unde amet asperiores sequi voluptate illo.</p>
-            </div>
-            <div class="row">
-                <img src="" alt="">
-                <p></p>
-            </div>
-        </div>
-    </div>
-    <!-- Start A PROPOS-->
-
-    <!-- Start Footer-->
-    <footer class="footer">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="site-info">
-                        <a class="navbar-brand" href="#"><h2>MaLa3iiB</h2></a>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet eveniet rem tempora debitis praesentium itaque nihil.
-                        </p>
                     </div>
-
-                </div>
-                <div class="col-md-4">
-                    <div class="helpful-links">
-                        <h3>Liens Utiles</h3>
-                        <ul class="list-unstyled">
-                            <li><i class="fas fa-futbol"></i> <a class="" href="#home">Accueil</a></li>
-                            <li><i class="fas fa-futbol"></i> <a class="" href="#">Reserver</a></li>
-                            <li><i class="fas fa-futbol"></i> <a class="" href="#">Contact</a></li>
-                        </ul>
+                    <div class="col-md-4">
+                        <div class="helpful-links">
+                            <h3>Liens Utiles</h3>
+                            <ul class="list-unstyled">
+                                <li><i class="fas fa-futbol"></i> <a class="" href="#home">Accueil</a></li>
+                                <li><i class="fas fa-futbol"></i> <a class="" href="#">Reserver</a></li>
+                                <li><i class="fas fa-futbol"></i> <a class="" href="#">Contact</a></li>
+                            </ul>
+                        </div>
                     </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="contact">
-                        <h3>Contact</h3>
-                        <ul class="list-unstyled">
-                            <li><i class="fas fa-futbol"></i> Adresse: Hay el Boughaz Rue 70A</li>
-                            <li><i class="fas fa-futbol"></i> Phone: +212 88459377</li>
-                            <li><i class="fas fa-futbol"></i> Email: <a href="mailto:info@mala3iib.com?subject=Contact">info@mala3iib.com</a></li>
-                        </ul>
+                    <div class="col-md-4">
+                        <div class="contact">
+                            <h3>Contact</h3>
+                            <ul class="list-unstyled">
+                                <li><i class="fas fa-futbol"></i> Adresse: Hay el Boughaz Rue 70A</li>
+                                <li><i class="fas fa-futbol"></i> Phone: +212 88459377</li>
+                                <li><i class="fas fa-futbol"></i> Email: <a href="mailto:info@mala3iib.com?subject=Contact">info@mala3iib.com</a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </footer>
-<!-- End Footer-->
-
+        </footer>
+    <!-- End Footer-->
+    </main>
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/main.js"></script>
