--- a/reserver.html
+++ b/reserver.html
@@ -52,26 +52,119 @@
 
     <!-- Start Reserver -->
     <main class="select-reservation">
-        <img src="./imges/reserver.jpg" class="img-fluid" alt="...">
+
+        <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+                <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="./imges/stade.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>First slide label</h5>
+                        <p>Some representative placeholder content for the first slide.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="./imges/stade2.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                    <h5>Second slide label</h5>
+                    <p>Some representative placeholder content for the second slide.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                <img src="./imges/stade3.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Third slide label</h5>
+                    <p>Some representative placeholder content for the third slide.</p>
+                </div>
+            </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+
         <div class="container">
             <section class="info-resrvation">
-                <h1>Select heure</h1>
                 <div class="row">
-                    
-                    <button class="btn">8h -> 9h</button>
-                    <button class="btn">10h -> 11h</button>
-                    <button class="btn">11h -> 12h</button>
-                    <button class="btn">12h -> 13h</button>
-                    <button class="btn">13h -> 14h</button>
-                    <button class="btn">14h -> 15h</button>
-                    <button class="btn">15h -> 14h</button>
-                    <button class="btn">14h -> 17h</button>
-                    <button class="btn">17h -> 18h</button>
-                    <button class="btn">18h -> 19h</button>
-                    <button class="btn">19h -> 20h</button>
-                    <button class="btn">20h -> 21h</button>
-                    <button class="btn">21h -> 22h</button>
-                    <button class="btn">22h -> 23h</button>
+                    <div class="heurs col-sm-12 col-md-6">
+                        <h1>Select heure</h1>
+                        <div class="row">
+                            
+                            <button class="btn">8h -> 9h</button>
+                            <button class="btn">10h -> 11h</button>
+                            <button class="btn">11h -> 12h</button>
+                            <button class="btn">12h -> 13h</button>
+                            <button class="btn">13h -> 14h</button>
+                            <button class="btn">14h -> 15h</button>
+                            <button class="btn">15h -> 14h</button>
+                            <button class="btn">14h -> 17h</button>
+                            <button class="btn">17h -> 18h</button>
+                            <button class="btn">18h -> 19h</button>
+                            <button class="btn">19h -> 20h</button>
+                            <button class="btn">20h -> 21h</button>
+                            <button class="btn">21h -> 22h</button>
+                            <button class="btn">22h -> 23h</button>
+                        </div>
+                    </div>
+                    <div class="condition col-sm-12 col-md-6">
+                        <h1>Conditions</h1>
+                        <ol>
+                            <li>Lorem ipsum dolor sit amet consectetur.</li>
+                            <li>Lorem ipsum dolor sit amet consectetur.</li>
+                            <li>Lorem ipsum dolor sit amet consectetur.</li>
+                        </ol>
+                    </div>
+                </div>
+                <div class="info-player">
+                    <h1>informations personnelles</h1>
+                    <form>
+                        <div class="form-row">
+                          <div class="col-md-6 mb-3">
+                            <label for="validationServer01">Prénom</label>
+                            <input type="text" class="form-control is-valid" id="validationServer01" required>
+                            <div class="valid-feedback">
+                              Looks good!
+                            </div>
+                          </div>
+                          <div class="col-md-6 mb-3">
+                            <label for="validationServer02">Nom</label>
+                            <input type="text" class="form-control is-valid" id="validationServer02" required>
+                            <div class="valid-feedback">
+                              Looks good!
+                            </div>
+                          </div>
+                        </div>
+                        <div class="form-row">
+                          <div class="">
+                            <label for="validationServer03">Téléphone</label>
+                            <input type="text" class="form-control is-invalid" id="validationServer03" aria-describedby="validationServer03Feedback" required>
+                            <div id="validationServer03Feedback" class="invalid-feedback">
+                              Please provide a valid phone.
+                            </div>
+                          </div>
+                        </div>
+                        <div class="form-group">
+                          <div class="form-check">
+                            <input class="form-check-input is-invalid" type="checkbox" value="" id="invalidCheck3" aria-describedby="invalidCheck3Feedback" required>
+                            <label class="form-check-label" for="invalidCheck3">
+                              Agree to terms and conditions
+                            </label>
+                            <div  id="invalidCheck3Feedback" class="invalid-feedback">
+                              You must agree before submitting.
+                            </div>
+                          </div>
+                        </div>
+                        <button class="btn btn-primary" type="submit">Submit form</button>
+                      </form>
                 </div>
             </section>
         </div>
