--- a/reserver.html
+++ b/reserver.html
@@ -97,23 +97,23 @@
                 <div class="row">
                     <div class="heurs col-sm-12 col-md-6">
                         <h1><span>*</span> Select heure</h1>
+                        <input id="datefield" type='date' />
                         <div class="row">
-                            
-                            <button class="btn">8h -> 9h</button>
-                            <button class="btn">9h -> 10h</button>
-                            <button class="btn bg-warning">10h -> 11h</button>
-                            <button class="btn">11h -> 12h</button>
-                            <button class="btn">12h -> 13h</button>
-                            <button class="btn">13h -> 14h</button>
-                            <button class="btn">14h -> 15h</button>
-                            <button class="btn">15h -> 14h</button>
-                            <button class="btn">14h -> 17h</button>
-                            <button class="btn bg-danger">17h -> 18h</button>
-                            <button class="btn bg-danger">18h -> 19h</button>
-                            <button class="btn">19h -> 20h</button>
-                            <button class="btn bg-warning">20h -> 21h</button>
-                            <button class="btn bg-danger">21h -> 22h</button>
-                            <button class="btn bg-danger">22h -> 23h</button>
+                            <button class="btn btnTimeReserve" time="8" >8h -> 9h</button>
+                            <button class="btn btnTimeReserve" time="9">9h -> 10h</button>
+                            <button class="btn btnTimeReserve" time="10">10h -> 11h</button>
+                            <button class="btn btnTimeReserve" time="11">11h -> 12h</button>
+                            <button class="btn btnTimeReserve" time="12">12h -> 13h</button>
+                            <button class="btn btnTimeReserve" time="13">13h -> 14h</button>
+                            <button class="btn btnTimeReserve" time="14">14h -> 15h</button>
+                            <button class="btn btnTimeReserve" time="15">15h -> 14h</button>
+                            <button class="btn btnTimeReserve" time="16">14h -> 17h</button>
+                            <button class="btn btnTimeReserve " time="17">17h -> 18h</button>
+                            <button class="btn btnTimeReserve " time="18">18h -> 19h</button>
+                            <button class="btn btnTimeReserve" time="19">19h -> 20h</button>
+                            <button class="btn btnTimeReserve" time="20">20h -> 21h</button>
+                            <button class="btn btnTimeReserve " time="21">21h -> 22h</button>
+                            <button class="btn btnTimeReserve " time="22">22h -> 23h</button>
                         </div>
                     </div>
                     <div class="condition col-sm-12 col-md-6">
