--- a/crud/index.html
+++ b/crud/index.html
@@ -30,11 +30,11 @@
 <script src="dist/js/adminlte.min.js"></script>
 <!-- AdminLTE for demo purposes -->
 <script src="dist/js/demo.js"></script>
-<script type="text/babel" src="js/product.component.js"></script>
-  <script type="text/babel" src="js/crudProduct.component.js"></script>
-  <script type="text/babel" src="js/sidebar.component.js"></script>
-  <script type="text/babel" src="js/menu.component.js"></script>
-  <script type="text/babel" src="js/app.component.js"></script>
-  <script type="text/babel" src="js/script.js"></script>
+<script type="text/babel" src="./components-JS/product.component.js"></script>
+  <script type="text/babel" src="./components-JS/crudProduct.component.js"></script>
+  <script type="text/babel" src="./components-JS/sidebar.component.js"></script>
+  <script type="text/babel" src="./components-JS/menu.component.js"></script>
+  <script type="text/babel" src="./components-JS/app.component.js"></script>
+  <script type="text/babel" src="./components-JS/script.js"></script>
 </body>
 </html>
