--- a/login/index.html
+++ b/login/index.html
@@ -4,20 +4,20 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Admin Login Form</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Poppins:600&display=swap" rel="stylesheet">
-	<script src="https://kit.fontawesome.com/a81368914c.js"></script>
+		<link rel="stylesheet" type="text/css" href="../css/login.css">
+
 </head>
 
 <body>
 
 	<div class="container">
 		<div class="img">
-			<img src="img/nice.svg">
+			<img src="../imges/img/nice.svg">
 		</div>
 		<div class="login-content">
 			<form id="loginForm" method="POST" action="api/login.php">
-				<img src="img/tt.svg">
+				<img src="../imges/img/tt.svg">
 				<h2 class="title">Bonjour</h2>
 				<div class="input-div one">
 					<div class="i">
@@ -46,9 +46,8 @@
 			</form>
 		</div>
 	</div>
-	<script src="https://code.jquery.com/jquery-3.6.0.js"
-		integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-	<script type="text/javascript" src="js/main.js"></script>
+	<script type="text/javascript" src="../js/jquery-3.6.0.min.js"></script>
+	<script type="text/javascript" src="../js/login.js"></script>
 </body>
 
 </html>
