modified on page login

--- a/login/index.html
+++ b/login/index.html
@@ -12,12 +12,9 @@
 <body>
 
 	<div class="container">
-		<div class="img">
-			<img src="../imges/img/nice.svg">
-		</div>
 		<div class="login-content">
 			<form id="loginForm" method="POST" action="api/login.php">
-				<img src="../imges/img/tt.svg">
+				<img src="../imges/img/admin2.jpg">
 				<h2 class="title">Bonjour</h2>
 				<div class="input-div one">
 					<div class="i">
@@ -40,8 +37,11 @@
 				</div>
 		
 
-<!-- An element to toggle between password visibility -->
-<input type="checkbox" id="show_pass" onclick="myFunction()">Show Password
+				<!-- An element to toggle between password visibility -->
+				<label>
+				<input type="checkbox" id="show_pass" onclick="myFunction()">
+				Show Password</label>
+
 				<input type="submit" class="btn" value="Connexion">
 			</form>
 		</div>
