Add Input of Filter Date Dynamicly without showing data yet

--- a/crud/index.html
+++ b/crud/index.html
@@ -29,12 +29,14 @@
 <!-- AdminLTE App -->
 <script src="dist/js/adminlte.min.js"></script>
 <!-- AdminLTE for demo purposes -->
-<script src="dist/js/demo.js"></script>
+<!-- <script src="dist/js/demo.js"></script> -->
 <script type="text/babel" src="./components-JS/product.component.js"></script>
+<script type="text/babel" src="./components-JS/Filter.component.js"></script>
   <script type="text/babel" src="./components-JS/crudProduct.component.js"></script>
   <script type="text/babel" src="./components-JS/sidebar.component.js"></script>
   <script type="text/babel" src="./components-JS/menu.component.js"></script>
   <script type="text/babel" src="./components-JS/app.component.js"></script>
   <script type="text/babel" src="./components-JS/script.js"></script>
+  <script type="text/babel" src="./components-JS/script2.js"></script>
 </body>
 </html>
