add key in button reservation

--- a/index.html
+++ b/index.html
@@ -30,20 +30,20 @@
                 <a class="navbar-brand" href="./index.html">
                     <img class="logo" src="./imges/MALA3IIB.png">
                 </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav"
+                <button style="background-color: #80BD3C;" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="main-nav">
-                    <ul class="navbar-nav ml-auto">
+                    <ul class="navbar-nav ml-auto d-flex justify-content-around align-items-center">
                         <li class="nav-item">
-                            <a class="nav-link" href="#home">Accueil</a>
+                            <a class="nav-link mr-4" href="#home">Accueil</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#about">A propos</a>
+                            <a class="nav-link mr-4" href="#about">A propos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
+                            <a class="nav-link mr-4" href="#">Contact</a>
                         </li>
                         <li class="nav-item active">
                             <a class="nav-link" href="#reserver">Réserver<span class="sr-only">(current)</span></a>
