--- a/reserver.html
+++ b/reserver.html
@@ -27,7 +27,7 @@
             <a class="navbar-brand" href="./index.html">
                 <img class="logo" src="./imges/MALA3IIB.png">
             </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button style="background-color: #80BD3C;" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="main-nav">
@@ -113,6 +113,11 @@
                             <button class="btn btnTimeReserve" time="20">20h -> 21h</button>
                             <button class="btn btnTimeReserve" time="21">21h -> 22h</button>
                             <button class="btn btnTimeReserve" time="22">22h -> 23h</button>
+                        </div>
+                        <div class="key">
+                            <i class="fa fa-square mr-1"></i>Disponible
+                            <i class="fa fa-square text-warning ml-4 mr-1"></i> en attendant
+                            <i class="fa fa-square text-danger ml-4 mr-1"></i>réservée
                         </div>
                     </div>
                     <div class="condition col-sm-12 col-md-6">
