added function Affichage le prix de jour et de nuit

--- a/reserver.html
+++ b/reserver.html
@@ -99,7 +99,8 @@
                         <h1><span>*</span> Choisissez la date et l'heure</h1>
                         <input class="form-control" id="datefield" type="date" />
                         <div class="row">
-                            <button class="btn btnTimeReserve" time="8">8h -> 9h</button>
+                            <button class="btn btnTimeReserve" time="08">8h -> 9h</button>
+                            <button class="btn btnTimeReserve" time="09">9h -> 10h</button>
                             <button class="btn btnTimeReserve" time="10">10h -> 11h</button>
                             <button class="btn btnTimeReserve" time="11">11h -> 12h</button>
                             <button class="btn btnTimeReserve" time="12">12h -> 13h</button>
@@ -119,6 +120,8 @@
                             <i class="fa fa-square text-warning ml-4 mr-1"></i> en attendant
                             <i class="fa fa-square text-danger ml-4 mr-1"></i>réservée
                         </div>
+                        
+                        <p id="prix" class="text-light mt-5 border rounded-pill p-3 h5"></p>
                     </div>
                     <div class="condition col-sm-12 col-md-6">
                         <h1>Conditions</h1>
