modified on navbar and footer in page reservation

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
                 <a class="navbar-brand" href="./index.html">
-                    <img class="logo" src="./imges/MALA3IIB.png">
+                   <h1>MaLa3iiB</h1> 
+                    <!--<img class="logo" src="./imges/MALA3IIB.png">-->
                 </a>
                 <button style="background-color: #80BD3C;" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
