--- a/reserver.html
+++ b/reserver.html
@@ -22,32 +22,30 @@
 </head>
 <body class="img-fdluid">
     <!-- Start Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
             <a class="navbar-brand" href="./index.html">
-                <img class="logo" src="./imges/MALA3IIB.png">
-            </a>
+                <h1>MaLa3iiB</h1> 
+                 <!--<img class="logo" src="./imges/MALA3IIB.png">-->
+             </a>
             <button style="background-color: #80BD3C;" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="main-nav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                <a class="nav-link" href="#home">Accueil</a>
+                <a class="nav-link mr-3" href="#home">Accueil</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="#about">A propos</a>
+                <a class="nav-link mr-3" href="#about">A propos</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="#reserver">Réserver<span class="sr-only">(current)</span></a>
+                <a class="nav-link mr-3" href="#">Contact</a>
                 </li>
             </ul>
             </div>
         </div>
-    </nav>
+    </nav> 
     <!-- End Navbar -->
 
     <!-- Start Reserver -->
@@ -92,6 +90,7 @@
             </a>
         </div>
 
+    <!--info-resrvation-->
         <div class="container">
             <section class="info-resrvation">
                 <div class="row">
